--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
 
-   <link rel="stylesheet" href="./Style.css">
+   <link rel="stylesheet" href="./style.css">
   <body>
     
     <header>
